// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DataSourceManagement should match snapshot 1`] = `
<div>
  <article>
    <div
      class="actiontech-page-header-namespace css-ex8bfe"
    >
      <div
        class="title"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            数据源管理
          </div>
        </div>
      </div>
      <div
        class="extra"
      />
    </div>
    <div
      class="segmented-tabs-wrapper"
    >
      <div
        class="ant-row segmented-row-wrapper css-156vlto"
      >
        <div
          class="ant-segmented basic-segmented-wrapper css-18p941p"
        >
          <div
            class="ant-segmented-group"
          >
            <label
              class="ant-segmented-item ant-segmented-item-selected"
            >
              <input
                checked=""
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="全局数据源"
              >
                全局数据源
              </div>
            </label>
            <label
              class="ant-segmented-item"
            >
              <input
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="外部数据源同步"
              >
                外部数据源同步
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        class="lazy-load-wrapper segmented-item-content lazy-load-wrapper-show css-952l0m"
      >
        <section />
      </div>
    </div>
  </article>
</div>
`;

exports[`test DataSourceManagement should match snapshot 2`] = `
<div>
  <article>
    <div
      class="actiontech-page-header-namespace css-ex8bfe"
    >
      <div
        class="title"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            数据源管理
          </div>
        </div>
      </div>
      <div
        class="extra"
      />
    </div>
    <div
      class="segmented-tabs-wrapper"
    >
      <div
        class="ant-row segmented-row-wrapper css-156vlto"
      >
        <div
          class="ant-segmented basic-segmented-wrapper css-18p941p"
        >
          <div
            class="ant-segmented-group"
          >
            <label
              class="ant-segmented-item"
            >
              <input
                checked=""
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="全局数据源"
              >
                全局数据源
              </div>
            </label>
            <label
              class="ant-segmented-item ant-segmented-item-selected"
            >
              <input
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="外部数据源同步"
              >
                外部数据源同步
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        class="lazy-load-wrapper segmented-item-content lazy-load-wrapper-show css-952l0m"
      >
        <article />
      </div>
    </div>
  </article>
</div>
`;
